--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -3,10 +3,15 @@
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   overflow: hidden;
+  display: flex;
 }
 
 .card {
   /* display, flex-direction, flex-grow, flex-basis */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 3;
+  flex-basis: 0;
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   border: none;
@@ -17,6 +22,10 @@
 
 .cardDescription {
   /* display, flex-direction, align-items, flex-grow */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 2;
   padding: 15px 0;
 }
 
